kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
  labels:
    app: homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      volumes:
      - name: shared-volume
        emptyDir:
          sizeLimit: 5Mi

      containers:
      - name: web-server
        image: nginx:alpine3.20
        ports:
        - name: web-server
          containerPort: 8000
        volumeMounts:
        - mountPath: /homework
          name: shared-volume
          subPath: homework
        - mountPath: /etc/nginx/templates/
          name: shared-volume
          subPath: nginx-templates
        lifecycle:
          preStop:
              exec:
                command: ['sh','-c','rm -f /homework/index.html /etc/nginx/templates/default.conf.template']
        readinessProbe:
          httpGet:
            path: /index.html
            port: web-server
          initialDelaySeconds: 5
          periodSeconds: 5
