kubernetes-networks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  namespace: homework
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homework-service
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress-rewrite
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /homepage$
        pathType: ImplementationSpecific
        backend:
          service:
            name: homework-service
            port:
              number: 80
